--- a/src/main/webapp/user/new.xhtml
+++ b/src/main/webapp/user/new.xhtml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
@@ -21,38 +21,36 @@
                         <h:form styleClass="formStyle" id="create">
                             <p:growl id="formMessage" autoUpdate="true" />
                             <h:panelGrid columns="4" >
-                                <h:outputText styleClass="txt" value="#{msgs.firstName}"/>
+                                <h:outputText  value="#{msgs.firstName}"/>
                                 <p:inputText value="#{appUserView.appUser.name.firstName}" id="firstname"
-                                             title="Specify your firstname" requiredMessage="Enter first name" required="true"/>
+                                             title="Specify your firstname" />
 
-                                <h:outputText styleClass="txt" value="#{msgs.middleName}"/>
+                                <h:outputText  value="#{msgs.middleName}"/>
                                 <p:inputText value="#{appUserView.appUser.name.middleName}" id="middlename"
-                                             title="Specify your middle name" requiredMessage="Enter middle name"
-                                             required="true"/>
+                                             title="Specify your middle name" />
 
-                                <h:outputText styleClass="txt" value="#{msgs.lastName}"/>
+                                <h:outputText value="#{msgs.lastName}"/>
                                 <p:inputText value="#{appUserView.appUser.name.lastName}" id="lastname"
-                                             title="Specify your lastname" requiredMessage="Enter last name" required="true"/>
+                                             title="Specify your lastname" />
 
-                                <h:outputText styleClass="txt" value="#{msgs.userRole}"/>
-                                <p:selectOneMenu value="#{appUserView.appUser.approle}">
-                                    <f:selectItem itemLabel="Select A Role" itemValue="" />
-                                    <f:selectItems value="#{appRoleView.appRoleList}" var="rolez" itemLabel="#{rolez.roleName}" itemValue="#{rolez.id}"/>
+                                <h:outputText  value="#{msgs.userRole}"/>
+                                <p:selectOneMenu value="#{appUserView.appUser.approle.id}">
+                                    <f:selectItem itemLabel="Select a role" itemValue="" />
+                                    <f:selectItems value="#{appRoleView.appRoleList}" var="rolez" itemLabel="#{rolez.roleDescription}" itemValue="#{rolez.id}"/>
                                 </p:selectOneMenu>
 
-                                <h:outputText styleClass="txt" value="#{msgs.userName}"/>
+                                <h:outputText  value="#{msgs.userName}"/>
                                 <p:inputText title="Username to login " value="#{appUserView.appUser.username}"
                                              validatorMessage="Your Username is needed"
-                                             id="username" required="true" requiredMessage="Your Username is needed"/>
+                                             id="username" />
 
-                                <h:outputText styleClass="txt" value="#{msgs.userPassword}"/>
+                                <h:outputText  value="#{msgs.userPassword}"/>
                                 <p:password value="#{appUserView.appUser.password}" id="passwd" minLength="6"
                                             feedback="true"/>
 
-                                <h:outputText styleClass="txt" value="#{msgs.emptymessage}"/>
+                                <h:outputText  value="#{msgs.emptymessage}"/>
                                 <h:panelGroup>
-                                    <p:commandButton value="#{msgs.Savebutton}" update="formMessage"
-                                                     />
+                                    <p:commandButton value="#{msgs.Savebutton}" action="#{appUserView.createappUser}" update="formMessage" />
                                     <p:commandButton type="reset" value="#{msgs.Cancelbutton}" update="formMessage" immediate="true"/>
                                 </h:panelGroup>
 
