JAAS Works well now

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-    <meta http-equiv="Refresh" content="0; URL=home.xhtml"/>
+    <meta http-equiv="Refresh" content="0; URL=login.xhtml"/>
      <title>D'Help</title>
     </h:head>
 </html>
