--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
-    <h:head>
-        <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/yiitheme/main.css"/>
+<h:head>
+    <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/yiitheme/main.css"/>
 
-    </h:head>
+</h:head>
 
-    <h:body>
-        <div id="idform" style="width: 20%; margin: 200px auto">
-            <p:panel header="Login" footer="bfs">
-               
-                <form method="POST" action="j_security_check">
-                    <h:panelGrid columns="2">
-                        <h:outputText value="Username:"/>
-                        <h:inputText  id="j_username" required="true" styleClass="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all" />
+<h:body>
+    <div id="idform" style="width: 20%; margin: 200px auto">
+        <p:panel header="Login" footer="bfs">
 
-                        <h:outputText value="Password"/>
-                        <h:inputSecret id="j_password" required="true" styleClass="ui-inputfield ui-password ui-widget ui-state-default ui-corner-all" />
+            <form method="POST" action="j_security_check">
+                <h:panelGrid columns="2">
+                    <h:outputText value="Username:"/>
+                    <h:inputText id="j_username" required="true"
+                                 styleClass="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all"/>
 
-                        <h:outputText />
-                        <h:commandButton id="login" styleClass="ui-button ui-state-default ui-corner-all" value="Login"/>
-                    </h:panelGrid>
-                </form>
-           
-            </p:panel>
-        </div>
-    </h:body>
+                    <h:outputText value="Password"/>
+                    <h:inputSecret id="j_password" required="true"
+                                   styleClass="ui-inputfield ui-password ui-widget ui-state-default ui-corner-all"/>
+
+                    <h:outputText/>
+                    <h:commandButton id="login" styleClass="ui-button ui-state-default ui-corner-all" value="Login"/>
+                </h:panelGrid>
+            </form>
+
+        </p:panel>
+    </div>
+</h:body>
 
 </html>
