--- a/src/main/webapp/newTemplate.xhtml
+++ b/src/main/webapp/newTemplate.xhtml
@@ -1,38 +1,43 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html">
 
-    <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
-        <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
-        <title>Husbit</title>
-    </h:head>
+<h:head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <h:body>
+    <title>Husbit</title>
+</h:head>
 
-        <div id="top">
-            <ui:insert name="top">Top</ui:insert>
-        </div>
-        <div>
-            <div id="left">
-                <ui:insert name="left">Left</ui:insert>
-            </div>
-            <div>
-                <div id="right">
-                    <ui:insert name="right">Right</ui:insert>
-                </div>
-                <div id="content" class="right_content">
-                    <ui:insert name="content">Content</ui:insert>
-                </div>
-            </div>
-        </div>
-        <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
-        </div>
+<h:body>
+ <!--<p:tab rendered="#{roomCategoryView.editMode}" title="Add A Room" id="createtab">-->
+                                    <!--<h:panelGrid columns="4">-->
+                                        <!--<h:outputText value="#{msgs.name}"/>-->
+                                        <!--<p:inputText value="#{roomCategoryView.room.name}" id="rname"-->
+                                                     <!--title="Room Name"/>-->
 
-    </h:body>
+                                        <!--<h:outputText value="#{msgs.label_noOfUsage}"/>-->
+                                        <!--<p:inputText disabled="true" value="#{roomCategoryView.room.numberOfUsage}" id="nofusage"-->
+                                                     <!--title="Number of usage for the room"/>-->
+
+                                        <!--<h:outputText value="#{msgs.emptymessage}"/>-->
+
+                                        <!--<h:panelGroup>-->
+                                            <!--<p:commandButton  value="#{msgs.button_addroom_toroomCategory}"-->
+                                                             <!--actionListener="#{roomCategoryView.addRoomToRoomCategory}"-->
+                                                             <!--action="#{roomCategoryView.reinitRoom}"-->
+                                                             <!--update="tableform rname nofusage">-->
+                                                <!--<p:collector  value="#{roomCategoryView.room}"-->
+                                                             <!--addTo="#{roomCategoryView.selectedRoomCategory.rooms}"/>-->
+                                            <!--</p:commandButton>-->
+                                            <!--<p:commandButton type="reset" value="#{msgs.button_reset}" update="formMessage"-->
+                                                             <!--immediate="true"/>-->
+                                        <!--</h:panelGroup>-->
+                                    <!--</h:panelGrid>-->
+                                <!--</p:tab>-->
+
+</h:body>
 
 </html>
