--- a/src/main/webapp/user/viewuser.xhtml
+++ b/src/main/webapp/user/viewuser.xhtml
@@ -95,8 +95,8 @@
             <h:form>
                 <p:menu>
                     <p:submenu label="User Operations">
-                        <p:menuitem value="Create User" url="/user/new.xhtml"/>
-                        <p:menuitem value="Manage Users" url="/user/manage.xhtml"/>
+                        <p:menuitem value="Create User" url="/user/newuser.xhtml"/>
+                        <p:menuitem value="Manage Users" url="/user/manageusers.xhtml"/>
                     </p:submenu>
                 </p:menu>
             </h:form>
