--- a/src/main/webapp/assets/room/newroom.xhtml
+++ b/src/main/webapp/assets/room/newroom.xhtml
@@ -33,6 +33,7 @@
 
                             <h:outputText value="#{msgs.label_roomCategory}"/>
                             <p:selectOneMenu id="selectRoomCategory" value="#{roomView.room.roomCategory.id}">
+                                <f:selectItem itemLabel="Select Room Category" itemValue="-1"/>
                                 <f:selectItems value="#{roomCategoryList}" var="rc"
                                                itemLabel="#{rc.name}" itemValue="#{rc.id}"/>
                             </p:selectOneMenu>
@@ -40,12 +41,11 @@
                             <p:spacer/>
                             <p:spacer/>
 
-
                             <h:outputText value="#{msgs.emptymessage}"/>
                             <h:panelGroup>
-                                <p:commandButton rendered="#{!roomCategoryList.isEmpty()}" value="#{msgs.button_save}" action="#{roomView.createRoom}"
+                                <p:commandButton  value="#{msgs.button_save}" action="#{roomView.createRoom}"
                                                  update="formMessage"/>
-                                <p:commandButton rendered="#{!roomCategoryList.isEmpty()}" type="reset" value="#{msgs.button_cancel}" update="formMessage"
+                                <p:commandButton  type="reset" value="#{msgs.button_cancel}" update="formMessage"
                                                  immediate="true"/>
                             </h:panelGroup>
                         </h:panelGrid>
