--- a/src/main/webapp/user/newuser.xhtml
+++ b/src/main/webapp/user/newuser.xhtml
@@ -68,7 +68,7 @@
             <h:form>
                 <p:menu>
                     <p:submenu label="User Operations">
-                        <p:menuitem value="Manage Users" url="/user/manage.xhtml"/>
+                        <p:menuitem value="Manage Users" url="/user/manageusers.xhtml"/>
                     </p:submenu>
                 </p:menu>
             </h:form>
